# git-changelog

./: .copier-answers.yml  .coverage-tmp.html  .cruft.json  .gitignore  .gitlab-ci.yml  .pdm.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  coverage.ini  devdeps.txt  duties.py  duties.py.rej  gitolog.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml.rej  script.py  search.json  setup.py  sitemap.xml  tests.py  zensical.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
cli/: index.html
code_of_conduct/: index.html
config/: coverage.ini  flake8.ini  flake8.ini.rej  mypy.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: covindex.html  d_695d5ae180c13dd8___init___py.html  d_6e1d82568f61fc4d_build_py.html  d_6e1d82568f61fc4d_cli_py.html  d_6e1d82568f61fc4d_commit_py.html  d_6e1d82568f61fc4d_debug_py.html  d_6e1d82568f61fc4d_providers_py.html  d_6e1d82568f61fc4d_versioning_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_helpers_py.html  d_a44f0ac069e85531_test_angular_style_py.html  d_a44f0ac069e85531_test_basic_style_py.html  d_a44f0ac069e85531_test_build_py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_commit_py.html  d_a44f0ac069e85531_test_conventional_commit_style_py.html  d_a44f0ac069e85531_test_end_to_end_py.html  d_a44f0ac069e85531_test_providers_py.html  d_a44f0ac069e85531_test_release_notes_py.html  d_a44f0ac069e85531_test_version_py.html  d_a44f0ac069e85531_test_versioning_py.html  index.html  status.json
credits/: index.html
css/: mkdocstrings.css
docs/: cli.md  conf.py  gen_ref_nav.py  index.md  spelling_wordlist.txt  usage.md
docs/.overrides/partials/: comments.html
docs/css/: mkdocstrings.css
docs/reference/: api.md  build.md  cli.md  commit.md  providers.md
docs/templates/python/material/: parameters.html  return.html
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/__main__/: index.html
reference/api/: index.html  index.md
reference/cli/: index.html
reference/commit/: index.html
reference/git_changelog/: index.html
reference/git_changelog/cli/: index.html
reference/git_changelog/commit/: index.html
reference/git_changelog/debug/: index.html
reference/git_changelog/providers/: index.html
reference/git_changelog/templates/: index.html
reference/git_changelog/versioning/: index.html
reference/providers/: index.html
reference/templates/__init__/: index.html
scripts/: gen-readme-data.py  gen_credits.py  gen_credits.py.rej  gen_ref_nav.py  make  make.py  update_changelog.py
scripts/templates/: CREDITS.md  README.md
search/: search_index.json
src/: pyproject.toml
src/git_changelog/: __init__.py  __init__.py.rej  __main__.py  build.py  cli.py  cli.py.rej  commit.py  debug.py  providers.py  style.py  templates.py  versioning.py
src/git_changelog/_internal/: build.py  cli.py  commit.py  debug.py  providers.py  versioning.py
src/git_changelog/_internal/templates/: __init__.py  angular.md.jinja  debian.md.jinja  keepachangelog.md.jinja
src/git_changelog/config/: __init__.py
src/git_changelog/config/commit_style/: angular.toml  basic.toml
src/git_changelog/config/refs/: github.toml  gitlab.toml
src/git_changelog/config/style/: angular.toml  basic.toml
src/git_changelog/config/urls/: github.toml  gitlab.toml
src/git_changelog/templates/: __init__.py  angular.md  angular.md.jinja  bumped_version.md.jinja  keepachangelog.md  keepachangelog.md.jinja
src/git_changelog/templates/angular/: changelog.md  commit.md
src/git_changelog/templates/keepachangelog/: commit.md  section.md  version.md
src/git_changelog/templates/keepachangelog-strictly/: commit.md  version.md
src/gitolog/: __init__.py  build.py  cli.py  providers.py  style.py
src/gitolog/templates/angular/: changelog.md  commit.md  version.md
src/gitolog/templates/keepachangelog/: section.md
templates/: changelog.md  commit.md  section.md  version.md  version_link.md
templates/angular/: changelog.md  section.md  version.md
templates/keepachangelog/: version.md
tests/: __init__.py  conftest.py  helpers.py  test_angular_style.py  test_api.py  test_basic_style.py  test_build.py  test_cli.py  test_cli.py.rej  test_commit.py  test_conventional_commit_style.py  test_end_to_end.py  test_linux_style.py  test_main.py  test_perf.py  test_providers.py  test_release_notes.py  test_version.py  test_versioning.py
usage/: index.html
